--- a/build.xml
+++ b/build.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="create_run_jar" name="Create Runnable Jar for Project LibraryManagement with Jar-in-Jar Loader">
+<project default="create_run_jar" name="Create Runnable Jar for Project LibraryManagement">
     <!--this file was created by Eclipse Runnable JAR Export Wizard-->
     <!--ANT 1.7 is required                                        -->
     <target name="create_run_jar">
-        <jar destfile="/home/francisco/git/java/LibraryManagement/LibraryManagement.jar">
+        <jar destfile="/home/francisco/git/java/LibraryManagement/LibraryManagement.jar" filesetmanifest="mergewithoutmain">
             <manifest>
-                <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
-                <attribute name="Rsrc-Main-Class" value="controller.Main"/>
+                <attribute name="Main-Class" value="controller.Main"/>
                 <attribute name="Class-Path" value="."/>
-                <attribute name="Rsrc-Class-Path" value="./"/>
             </manifest>
-            <zipfileset src="jar-in-jar-loader.zip"/>
             <fileset dir="/home/francisco/git/java/LibraryManagement/bin"/>
         </jar>
     </target>
